--- a/Andriod/.classpath
+++ b/Andriod/.classpath
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="con" path="com.esri.arcgis.android.LIBRARIES"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="var" path="ARCGIS_FOR_ANDROID/ArcGIS_PE.jar"/>
+	<classpathentry exported="true" kind="var" path="ARCGIS_FOR_ANDROID/ArcGIS_SG.jar"/>
+	<classpathentry exported="true" kind="var" path="ARCGIS_FOR_ANDROID/jackson-core-lgpl-1.6.3.jar"/>
+	<classpathentry exported="true" kind="var" path="ARCGIS_FOR_ANDROID/jackson-mapper-lgpl-1.6.3.jar"/>
+	<classpathentry exported="true" kind="var" path="ARCGIS_FOR_ANDROID/ArcGIS_Android.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/F:/java/andriod插件集/eclipse-standard-kepler-SR2-win32_4.3.2/eclipse-standard-kepler-SR2-win32/eclipse/plugins/com.esri.arcgis.android.doc_0.9.0.201102041513/doc.zip!/api"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
